<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_game_time"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/tvGameTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_game_time"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_dragon_num"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/tvDragonNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_dragon_num"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/btnAddTime"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/btn_add_time"
            android:layout_weight="1" />
        <Button
            android:id="@+id/btnReduceTime"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/btn_reduce_time"
            android:layout_weight="1"/>

    </LinearLayout>
    <Button
        android:id="@+id/btnKillDragon"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textSize="30sp"
        android:textColor="@color/colorAccent"
        android:text="@string/btn_kill_dragon"/>
    <Button
        android:id="@+id/btnGameStart"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/btn_game_start" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_count_down"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/tvCountDown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/value_count_down"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="80sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_about"
        android:gravity="center"/>
</LinearLayout>
